--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Somia Asim • Portfolio</title>
-  <meta name="description" content="Somia Asim — Research Associate | Geospatial & Data Analytics" />
+  <meta name="description" content="Somia Asim — GIS/Remote Sensing & Data Analyst" />
   <link rel="icon" href="assets/favicon.png" />
 
   <!-- Minimal, modern look -->
@@ -29,7 +29,7 @@
       margin:0;
       color:var(--text);
       font: 16px/1.65 ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif;
-      background: var(--bg-deep) url("assets/visuals/Background_1.jpg") center/cover fixed no-repeat;
+      background: var(--bg-deep) url("assets/Background_1.jpg") center/cover fixed no-repeat;
     }
 
     /* A subtle overall overlay for readability */
@@ -150,7 +150,7 @@
     <div class="kicker">Research Associate</div>
     <h1>Geospatial &amp; Data Analytics</h1>
     <p class="subline">
-      ESRI/ArcGIS • QGIS • Python • R • Google Earth Engine • Stata
+      ESRI Package • QGIS • Python/HTML/CSS/JS • R • Google Earth Engine
     </p>
     <div class="pills">
       <span class="pill">Urban Change</span>
